# acme-shop-payments-service

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/payments/: __init__.py  config.py  errors.py  feature_flags.py  logging_config.py  main.py  version.py
src/payments/api/: __init__.py  dependencies.py  router.py
src/payments/api/routers/: __init__.py  health.py  payments_v1.py  payments_v2.py  refunds_v1.py  refunds_v2.py  webhooks.py
src/payments/api/schemas/: __init__.py  payments.py  refunds.py  webhooks.py
src/payments/debug/: staging_config.py
src/payments/infra/: __init__.py  db.py
src/payments/interfaces/: __init__.py  payment_client.py
src/payments/models/: __init__.py  payment.py  refund.py  transaction.py  webhook.py
src/payments/providers/: __init__.py  paypal_client.py  stripe_client.py
src/payments/services/: __init__.py  payment_service.py  refund_service.py  transaction_manager.py
src/payments/utils/: __init__.py  crypto_legacy.py  headers.py  validators.py
tests/: __init__.py  conftest.py  test_crypto_legacy.py  test_health.py  test_models.py  test_payments_v1.py  test_payments_v2.py  test_refunds_v2.py
